--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
+    <!-- <link href="https://db.onlinewebfonts.com/c/c891e94039740e4a24a9f53324fd91be?family=NHaasGroteskDSPro-65Md" rel="stylesheet" type="text/css"> -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="bg-dark text-light"> <!-- Add bg-dark and text-light classes here -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
